@@ -4,6 +4,8 @@ Changelog
 1.0 (unreleased)
 ------------------
 
+- Bootstrap: theme plone.app.discussion page elements for Bootstrap.
+  [davidjb]
 - Bootstrap: adjust form markup to handle checkboxes inside "label" div
   elements not being displayed due to Bootstrap styling.
   [davidjb]
